revert to use extension